--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootswatch/dist/lux/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
