--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootswatch": "^4.6.0",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
-    "socket.io": "^3.1.1",
+    "socket.io": "~2.2.0",
+    "socket.io-client": "~2.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
